# c2a-adapter

./: CMakeLists.txt  README.md  emit_post.sh  main.cpp
include/: PublishNotification.cc  PublishNotification.h
src/: PublishNotification.cc  adapter_http_server.cc  adapter_http_server.h  aws_lamda_function.cc  aws_lamda_function.h  aws_sns_notification.cc  aws_sns_notification.h  ceph_bucket_notification.cc  ceph_bucket_notification.h  http_server.h  rgw_aws.cc  rgw_aws.h
test/: CMakeLists.txt  aws_lambda_test.cc  aws_sns_publish_test.cc  del.json  json_test.cc  parse_test.cpp  sample.json
